[package]
name = "mini-query"
version = "0.1.3"
edition = "2021"
description = "A mini ORM to quickly find / insert / retrieve records with tokio-postgres."
repository = "https://github.com/codabrink/mini-query"
license = "MPL-2.0"
keywords = ["database", "orm", "async", "sql", "postgres"]

[lib]
proc-macro = true

[dependencies]
syn = "2"
quote = "1"
proc-macro2 = "1"
convert_case = "0.6"
