[package]
name = "mini-query"
version.workspace = true
edition = "2021"
description = "A mini ORM to quickly find / insert / retrieve records with tokio-postgres."
license = "MPL-2.0"
readme = "../README.md"
keywords = ["database", "async", "orm", "postgres", "sql"]

[dependencies]
convert_case.workspace = true
paste = "1"
syn.workspace = true
proc-macro2.workspace = true
mini-query-derive = { path = "../mini-query-derive", version = "0.1.5" }
